samples/_failures_safe/1761002388_e13a5c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_658cb6bc.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_658cb6bc.c:176:33: error: missing terminating " character
  176 |         "IDENTIFIER", "NUMBER", "OPER
      |                                 ^~~~~
./samples/SAFE/__tmp_658cb6bc.c:176:9: error: expected expression at end of input
  176 |         "IDENTIFIER", "NUMBER", "OPER
      |         ^~~~~~~~~~~~
./samples/SAFE/__tmp_658cb6bc.c:176:9: error: expected declaration or statement at end of input
